syntax = "proto3";
package topk.control.v1;

import "topk/control/v1/dataset.proto";

service DatasetService {
  // List datasets
  rpc ListDatasets(ListDatasetsRequest) returns (ListDatasetsResponse);

  // Get dataset
  rpc GetDataset(GetDatasetRequest) returns (GetDatasetResponse);

  // Create dataset
  rpc CreateDataset(CreateDatasetRequest) returns (CreateDatasetResponse);

  // Delete dataset
  rpc DeleteDataset(DeleteDatasetRequest) returns (DeleteDatasetResponse);
}

message ListDatasetsRequest {}
message ListDatasetsResponse {
  repeated Dataset datasets = 1;
}

message GetDatasetRequest {
  string name = 1;
}
message GetDatasetResponse {
  Dataset dataset = 1;
}

message CreateDatasetRequest {
  string name = 1;
}
message CreateDatasetResponse {
  Dataset dataset = 1;
}

message DeleteDatasetRequest {
  string name = 1;
}
message DeleteDatasetResponse {}
